--- a/comparisons/plot-results.ipynb
+++ b/comparisons/plot-results.ipynb
@@ -162,7 +162,7 @@
     "    plt.ylabel(\"Execution time, seconds (Mean, n=5)\")\n",
     "    plt.xlabel(\"Size of graph $|E|$\")\n",
     "\n",
-    "    plt.yscale(\"log\")\n",
+    "    # plt.yscale(\"log\")\n",
     "\n",
     "    plt.legend()\n",
     "\n",
